# kraken-api

./: .gitignore  CMakeLists.txt  MIGRATION_KRAKEN.md  README.md  accinfo.json  exinfo.json  main.cpp
examples/kraken-balance/: CMakeLists.txt  main.cpp
examples/websockets/: CMakeLists.txt  main.cpp
include/binapi/: api.hpp  enums.hpp  reports.hpp  types.hpp
include/krapi/: api.hpp  double_type.hpp  enums.hpp  errors.hpp  fnv1a.hpp  invoker.hpp  iofmt.hpp  message.hpp  tools.hpp  types.hpp  websocket.hpp
src/: api.cpp  enums.cpp  errors.cpp  tools.cpp  types.cpp  websocket.cpp
tests/: .env.example  CMakeLists.txt  test_helpers.cpp  test_helpers.hpp  test_live.cpp  test_main.cpp  test_parsers.cpp
tests/fixtures/: add_order.json  add_order_validate.json  asset_pairs.json  balances.json  cancel_all_after.json  cancel_order.json  closed_orders.json  error.json  ohlc.json  open_orders.json  open_positions.json  order_book.json  query_orders.json  query_trades.json  recent_trades.json  server_time.json  system_status.json  ticker.json  trades_history.json
